etc/config_crds/virtualhost.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: llm-apis
  namespace: aigw
spec:
  hosts:
  - "*"
  gateways:
  - demo-aigw
  http:
  - match:
    - uri:
        prefix: /
    name: llm-apis
    route:
    - destination:
        host: qwen3
